src/tests/test-src/errors/mymod.syntran
fn helper(): i32
{
	return 1;
}
